force-app/main/default/objects/Opportunity/fields/Additional_Meeting_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Additional_Meeting_Scheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Additional Meeting Scheduled</label>
    <type>Checkbox</type>
</CustomField>