force-app/main/default/objects/Opportunity/fields/potential_value__c.field-meta.xml
<CustomField>
    <fullName>potential_value__c</fullName>
    <label>potential Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>